2009-02-17 Maarten Brock <sourceforge.brock AT dse.nl>

	* as/link/mcs51/lkihx.c (hexRecord): bugfix do not insert extended address
	  when addresses are unsorted

2008-02-15 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* device/include/mcs51/p89v66x.h: added ENBOOT thanks
	  Gudjon Gudjonsson <gudjon AT gudjon.org>
	* device/include/mcs51/p89c66x.h: fixed some defines
	* device/include/mcs51/p89v66x.h: fixed some sbit addresses
	* doc/sdccman.lyx: added <NO FLOAT> to index, try to reanimate
	  svn keywords

2008-02-14 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: corrected cpp info

2008-02-13 Borut Razem <borut.razem AT siol.net>

	* as/Makefile.in: *.doc renamed to *.txt

2008-02-11 Borut Razem <borut.razem AT siol.net>

	* as/doc/aslnk.doc, as/doc/abstra.doc: renamed to *.txt
	* as/doc/aslnk.txt, as/doc/asxhtml.html: changed licens to GPLv3

2008-02-11 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: documented ar format libraries

2008-02-10 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* support/regression/tests/float_single.c: added regression
	  test. Some testpoints for probably rarely used functions
	  (acosf, sinhf, tanf, expf) disabled for some targets

2008-02-10 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (pic16_freeAsmop): avoid NULL pointer dereference,
	  (genAssign): fixed for operands on the stack

	* device/lib/pic16/libc/stdio/vfprintf.c,
	  device/lib/pic16/configure.ac,
	  device/lib/pic16/Makefile.common: add configurable support for
	  printing floats via ./configure --enable-floats
	* device/lib/pic16/configure,
	  device/lib/pic16/Makefile.in,
	  device/lib/pic16/libm/Makefile.in,
	  device/lib/pic16/debug/Makefile.in,
	  device/lib/pic16/libio/Makefile.in,
	  device/lib/pic16/startup/Makefile.in,
	  device/lib/pic16/libsdcc/Makefile.in,
	  device/lib/pic16/libdev/Makefile.in,
	  device/lib/pic16/libc/Makefile.in: regenerated
	* doc/sdccman.lyx: documented float support and how to get it